--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
     "bootstrap": "^4.0.0-beta",
+    "chart.js": "^3.9.1",
     "jquery": "^3.6.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
